# navil_rbs_control_modules

./: .gitignore
cpp_controllers/rbs_lqr_cpp/: CMakeLists.txt  CMakeLists.txt.save
cpp_controllers/rbs_lqr_cpp/include/rbs_lqr_cpp/: rbs_lqr.hpp
cpp_controllers/rbs_lqr_cpp/src/: lqr_example.cpp  rbs_lqr.cpp
cpp_controllers/rbs_mpc_cpp/: CMakeLists.txt
py_controllers/rbs2_full_controller/: rbs2_lqr.py  rbs2_spline_utils.py
py_controllers/rbs_lqr_py/: lqr_test_lateral_model.py  lqr_test_long_model.py  rbs_lqr.py
py_controllers/rbs_mpc_py/: mpc_test_lateral_model.py  mpc_test_long_model.py
